# Bezpieczenstwo

./: .gitignore  lista2.py
lista3/: CAcert.crt  certA.crt  certA.csr  lighttpd.conf  localhost.pem  privkeyA.pem  privkeyB.pem
lista3/securesite/: db.sqlite3  manage.py
lista3/securesite/proxysite/: apps.py  urls.py  views.py
lista3/securesite/securesite/: settings.py  urls.py  wsgi.py
lista4/bank/: db.sqlite3  fcgi.py
lista4/bank/bank/: passwords.py  settings.py  urls.py
lista4/bank/przelewy/: admin.py  models.py  urls.py  utils.py  views.py
lista4/bank/przelewy/migrations/: 0001_initial.py  0002_auto_20171128_2010.py
lista4/rozszerzenie/: kradzież.oex
lista4/rozszerzenie/kradzież/: config.xml
lista4/rozszerzenie/kradzież/includes/: kradzież.js
lista5/: csrf.html  sql  xss.js
lista5/skipfish/: child_index.js  pivots.txt  samples.js  summary.js
lista5/skipfish/_i0/0/: response.js
lista5/skipfish/_i0/1/: response.js
lista5/skipfish/_i0/2/: request.js
lista5/skipfish/_i0/3/: request.js  response.js
lista5/skipfish/_i1/1/: response.js
lista5/skipfish/_i10/1/: response.js
lista5/skipfish/_i2/1/: request.js
lista5/skipfish/_i2/2/: request.js  response.js
lista5/skipfish/_i2/3/: request.js  response.js
lista5/skipfish/_i2/5/: request.js
lista5/skipfish/_i2/6/: response.js
lista5/skipfish/_i2/7/: request.js
lista5/skipfish/_i3/0/: response.js
lista5/skipfish/_i4/1/: response.js
lista5/skipfish/_i4/13/: response.js
lista5/skipfish/_i4/15/: request.js
lista5/skipfish/_i4/16/: request.js
lista5/skipfish/_i4/17/: request.js
lista5/skipfish/c0/: child_index.js  issue_index.js  response.js
lista6/: CMakeLists.txt
lista6/bclient/: CMakeLists.txt
lista6/bclient/src/: bclient.cpp
lista6/bserver/: CMakeLists.txt
lista6/bserver/src/: Server.cpp  Server.h  ServerThread.cpp  ServerThread.h  bserver.cpp  bserver.h  server.h
lista6/bverify/: CMakeLists.txt
lista6/bverify/src/: bverify.cpp
lista6/libblind/: CMakeLists.txt
lista6/libblind/include/: libblind.h
lista6/libblind/src/: libblind.cpp
lista8/: MWBcert.crt  MWBcert.pem  certUser.crt  certUser.csr  certUser.p12  lighttpd.conf  privkeyMWB.pem  privkeyUser.pem
lista9/: statystyki
(+123 files in other folders)
